<resources>
    <string name="app_name">Quick Dice Roller</string>
    <string name="app_author">Ohmnibus</string>
    <string name="lblName">Name</string>
    <string name="hintName">Enter die name here</string>
    <string name="lblDesc">Description</string>
    <string name="hintDesc">Enter die description here</string>
	<string name="lblIcon">Icon</string>
    <string name="lblExp">Formula</string>
    <string name="hintExp">Enter die formula here</string>
    <string name="lblRangeValue">Values</string>
	<string name="lblCannotEvaluate">Cannot evaluate</string>
	<string name="lblResultText">Extended result</string>
	<string name="lblResultValue">Numeric Result</string>
	<string name="lblDiceBuilder">Dice Builder</string>
	<string name="lblDiceBuilderMsg">Compose a single type dice roll to add to the main formula.</string>
	<string name="lblCheckExpression">Check die formula.</string>
	<string name="lblCheckPassed">Die formula is CORRECT.</string>
	<string name="lblIconPicker">Icon Picker</string>
	<string name="lblDiceIconPicker">Dice icon Picker</string>
	<string name="lblBagIconPicker">Bag icon Picker</string>
	<string name="lblModifierBuilder">Mod Builder</string>
	<string name="lblModifierBuilderMessage">Compose a modifier.</string>
	<string name="lblNeutralModifier">Does it make any sense to create a neutral modifier? Don\'t think so.</string>
	<string name="lblDuplicateModifier">This modifier already exists.</string>
    <string name="lblNameBag">Name</string>
    <string name="hintNameBag">Enter bag name here</string>
    <string name="lblDescBag">Description</string>
    <string name="hintDescBag">Enter bag description here</string>
	<string name="lblIconBag">Icon</string>
	<string name="lblMailSubject">[QDR] Suggestion</string>
	<string name="lblSendMail">Submit suggestion</string>
	<string name="lblCurrentFolder">Current folder: %1$s</string>
	<string name="lblItemHiddenFolder">Hidden folder</string>
	<string name="lblItemFolder">Folder</string>
	<string name="lblItemFile">%1$s - %2$s %3$s</string>
	<string name="lblParentFolder">Parent folder</string>
	<string name="lblSelectFile">Select file</string>
	<string name="lblSelectFolder">Select folder</string>
	<string name="lblNewFile">New file</string>
	<string name="lblImportFromRecent">Import from recent file</string>
	<string name="lblImportFrom">Import from&#8230;</string>
	<string name="lblExportTo">Export to&#8230;</string>
	<string name="lblItemMRU">%2$d dice in %1$s bags - %4$s %5$s</string>
	<string name="lblD">d</string>
	<string name="lblSelectDice">Select dice</string>
	<string name="lblSelectDiceDest">Select dice destination</string>
	<string name="lblLastPositionName">&lt;At the end&gt;</string>
	<string name="lblLastPositionDesc">&lt;Select this to move at the end&gt;</string>
	<string name="lblGb">Gb</string>
	<string name="lblMb">Mb</string>
	<string name="lblKb">Kb</string>
	<string name="lblB">b</string>
	<string name="lblConfirm">Confirm</string>
	<string name="lblCancel">Cancel</string>
	<string name="lblYes">Yes</string>
	<string name="lblNo">No</string>
	<string name="lblOk">OK</string>
	<string name="msgRemoveDiceTitle">Remove die</string>
	<string name="msgRemoveDice">Are you sure to definitively remove the die \"%1$s\"?</string>
	<string name="msgClearResultsTitle">Clear results</string>
	<string name="msgClearResults">Are you sure to clear all the roll results?</string>
	<string name="msgLostChange">Leaving now you will lose pending changes. Continue?</string>
	<string name="msgRemoveDiceBagTitle">Remove dice bag</string>
	<string name="msgRemoveDiceBag">Are you sure to definitively remove the dice bag \"%1$s\"? It contains \"%2$d\" dice and \"%3$d\" modifiers. All those items will be lost in time, like tears in rain.</string>
	<string name="msgWhatsNew">What\'s new</string>
	<string name="msgWhatsNewTitle">What\'s new in version %2$s</string>
	<string name="msgWhatsNewBody"><![CDATA[
<br />
<b>Please</b> send me a <a href="mailto:ohmnibus@gmail.com">mail</a> if you have any suggestion on how to improve the app and/or the translations.<br />
<br />
- Move dice through dice bags<br />
- Clone dice and dice bags<br />
- Swipe to delete a result<br />
- Restore deleted results<br />
- Link roll results on demand<br />
- Function \"abs\"<br />
- Fixed \"rup\" and \"rdn\" functions<br />
- Fixed \"rak\" function<br />
- Minor fix and improvements<br />
<br />]]></string>
	<string name="msgAboutTitle">About %1$s</string>
	<string name="msgAboutBody"><![CDATA[%1$s version %2$s<br />
Copyright (c) 2012-2014 by %3$s<br />
<br />
Translations: Stefania M. (ES), Magaolimpia (FR), Henning (DE)<br />
<br />
Please report bug to <a href="mailto:ohmnibus@gmail.com">ohmnibus@gmail.com</a><br />
<br />
This is a free app, however if you like it please consider to 
<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=JZSAC6BX5N9NN">make a donation</a>.
Thanks!<br />
<br />
- <a href="http://code.google.com/p/android-wheel/">Android wheel widget</a> is
published by Yuri Kanivets under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>.<br />
- <a href="https://github.com/lorensiuswlt/">QuickAction widget</a> is
published by Lorensius W. L. T. under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>.<br />
- <a href="https://github.com/romannurik/Android-SwipeToDismiss/">Swipe to Dismiss code</a> is
published by Roman Nurik under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>.<br />
- <a href="http://nineoldandroids.com/">Nine Old Androids</a> is
published by Jake Wharton under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>.<br />
- <a href="https://code.google.com/p/google-gson/">Google Gson</a> is
published by Google under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>.<br />]]></string>
	<string name="msgRemoveModTitle">Remove modifier</string>
	<string name="msgRemoveMod">Are you sure to definitively remove the modifier \"%1$s\"?</string>
	<string name="msgBonusTitle">Bonus %1$+d</string>
	<string name="msgBonusMessage">Positive modifier of %1$+d</string>
	<string name="msgMalusTitle">Penalty %1$+d</string>
	<string name="msgMalusMessage">Negative modifier of %1$+d</string>
	<string name="msgMaxBagsReach">You can\'t add more dice bags.</string>
	<string name="msgMaxDiceReach">You can\'t add more dice.</string>
	<string name="msgMaxModifiersReach">You can\'t add more modifiers.</string>
	<string name="msgOnlineHelpTitle">Quick reference</string>
	<string name="msgOnlineHelp">Check Online Help</string>
	<string name="msgOnlineHelpURL">http://www.ohmnibus.net/en/page.asp?Area=Android&amp;Item=QuickDice&amp;Page=Page02</string>
	<string name="msgCannotRead">Cannot read folder content (or part of it)</string>
	<string name="msgFileNameInvalid">File name \"%1$s\" is not valid.</string>
	<string name="msgFileNameExists">File name \"%1$s\" already exists. Are you sure you want to overwrite this file?</string>
	<string name="msgExported">Dice definitions exported</string>
	<string name="msgImported">Dice definitions imported</string>
	<string name="msgConfirmImport">This operation will overwrite all dice definitions. Are you sure you want to proceed?</string>
	<string name="mnuAddDice">Add die</string>
	<string name="mnuAddDiceHere">Add die here</string>
	<string name="mnuClearAllResults">Clear all results</string>
	<string name="mnuUndoClearAllResult">Restore all results</string>
	<string name="mnuSettings">Settings</string>
	<string name="mnuAbout">About</string>
	<string name="mnuSuggest">Send suggestion</string>
	<string name="mnuRemove">Remove die</string>
	<string name="mnuEdit">Edit die</string>
	<string name="mnuRoll">Roll die</string>
	<string name="mnuSwitchPrev">Switch with previous</string>
	<string name="mnuSwitchNext">Switch with next</string>
	<string name="mnuMoveTo">Move to&#8230;</string>
	<string name="mnuClone">Clone die</string>
	<string name="mnuDetails">Details</string>
	<string name="mnuClearResult">Clear result</string>
	<string name="mnuUndoClearResult">Restore result</string>
	<string name="mnuSplit">Split results</string>
	<string name="mnuMerge">Link with next</string>
	<string name="mnuAddMod">Add modifier</string>
	<string name="mnuRemoveMod">Remove modifier</string>
	<string name="mnuApplyMod">Apply modifier</string>
	<string name="mnuAddModHere">Add modifier here</string>
	<string name="mnuExit">Exit</string>
	<string name="mnuAddDiceBag">Add dice bag</string>
	<string name="mnuSelectDiceBag">Select dice bag</string>
	<string name="mnuEditDiceBag">Edit dice bag</string>
	<string name="mnuAddDiceBagHere">Add dice bag here</string>
	<string name="mnuRemoveDiceBag">Remove dice bag</string>
	<string name="mnuImportExport">Import / Export</string>
	<string name="mnuCloneDiceBag">Clone dice bag</string>
	<string name="fncBASHName">BASH!</string>
	<string name="fncBASHDesc">Makes a check using BASH! rules.</string>
	<string name="fncBASHURL">http://www.ohmnibus.net/en/page.asp?Area=Android&amp;Item=QuickDice&amp;Page=Page02#bash</string>
	<string-array name="fncBASHParamNames">
	    <item>Pool Size</item>
	    <item>Roll</item>
	</string-array>
	<string-array name="fncBASHParamHints">
	    <item>Number of roll to do</item>
	    <item>Expression to be tested</item>
	</string-array>
	<string name="fncBWheelName">Burning Wheel</string>
	<string name="fncBWheelDesc">Makes a check using Burning Wheel rules.</string>
	<string name="fncBWheelURL">http://www.ohmnibus.net/en/page.asp?Area=Android&amp;Item=QuickDice&amp;Page=Page02#bwheel</string>
	<string-array name="fncBWheelParamNames">
	    <item>Roll</item>
	    <item>Pool Size</item>
	    <item>Target</item>
	    <item>Roll Again</item>
	</string-array>
	<string-array name="fncBWheelParamHints">
	    <item>Expression to be tested</item>
	    <item>Number of roll to do</item>
	    <item>Value to reach to obtain a success</item>
	    <item>Value to reach to obtain an extra roll</item>
	</string-array>
	<string name="fncDWarsName">Dystopian Wars</string>
	<string name="fncDWarsDesc">Makes a check using Dystopian Wars rules.</string>
	<string name="fncDWarsURL">http://www.ohmnibus.net/en/page.asp?Area=Android&amp;Item=QuickDice&amp;Page=Page02#dwars</string>
	<string-array name="fncDWarsParamNames">
	    <item>Roll</item>
	    <item>Pool Size</item>
	    <item>Target</item>
	    <item>Roll Again</item>
	</string-array>
	<string-array name="fncDWarsParamHints">
	    <item>Expression to be tested</item>
	    <item>Number of roll to do</item>
	    <item>Value to reach to obtain a success</item>
	    <item>Value to reach to obtain an extra roll</item>
	</string-array>
	<string name="fncHEROName">HERO System</string>
	<string name="fncHERODesc">Roll a given number of d6 returning the total damage and the body damage.</string>
	<string name="fncHEROURL">http://www.ohmnibus.net/en/page.asp?Area=Android&amp;Item=QuickDice&amp;Page=Page02#hero</string>
	<string-array name="fncHEROParamNames">
	    <item>Pool Size</item>
	</string-array>
	<string-array name="fncHEROParamHints">
	    <item>Number of d6 to roll</item>
	</string-array>
	<string name="fncExalName">Exalted</string>
	<string name="fncExalDesc">Makes a check using Exalted rules.</string>
	<string name="fncExalURL">http://www.ohmnibus.net/en/page.asp?Area=Android&amp;Item=QuickDice&amp;Page=Page02#exal</string>
	<string-array name="fncExalParamNames">
	    <item>Pool Size</item>
	    <item>Target</item>
	</string-array>
	<string-array name="fncExalParamHints">
	    <item>Number of d10 to roll</item>
	    <item>Value to reach to obtain a success</item>
	</string-array>
	<string name="fncExpName">Exploding (simple)</string>
	<string name="fncExpDesc">Make an exploding roll. Explodes for high values as well as for low values.</string>
</resources>